2015-03-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSAutoreleasePool.m: Fix a bug leading to crashes on thread
	exit in cases where deallocation of something in the thread dictionary
	causes further use of the thread's autorelease pool (which has already
	been deallocated).

2015-03-10 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/GSTimSort.m: Fix a DoS vulnerability discovered in the 
	Timsort algorithm. For information about the problem please refer to
	http://www.envisage-project.eu/proving-android-java-and-python-sorting
	-algorithm-is-broken-and-how-to-fix-it/

2015-03-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileHandle.m: ([-sslHandshakeEstablished:outgoing:])
	If we can't create a session, the handshake should fail rather
	than being retried.  Fix infinite loop establish session on closed
	handle.

2015-02-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/GNUstepBase/NSDebug+GNUstepBase.h:
	Define DLog() and ALog() as suggested by Amr Aboelela

2015-02-28  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Check for gettid availability
	* configure: Regenerate
	* Headers/GNUstepBase/config.h.in: Regenerate
	* Source/GSPrivate.h: Update comment on GSLogThread
	* Documentation/Base.gsdoc: Update doc of GSLogThread
	* Source/NSLog.m: Change to log thread ID (to match OSX which now
	logs the thread ID along with the process ID).  Change the meaning
	of the GSLogThread user default (which used to turn on logging of
	the thread ID) so that it now turns on logging of the thread name
	(where a thread name has been set) and the NSThread address if no
	name has been set.

2015-02-16  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSData.m (writeToFile:options:error:): Fix leak of open
	file descriptor on systems where mkstemp is defined.

2015-02-15  Richard Frith-Macdonald <rfm@gnu.org>

	* config/objc-sys-dynamic.m4: Check for windows before anything else
	* configure: regenerate